--- a/数据结构和算法笔记/数据结构笔记2018-6-24.md
+++ b/数据结构和算法笔记/数据结构笔记2018-6-24.md
@@ -4,7 +4,7 @@
 typedef struct Node{
     ElemType data; //数据域
     struct Node* Next; //指针域
-}Node
+}Node;
 typedef struct Node* LinkList;
 ```
 ---
@@ -128,5 +128,5 @@ Status ListDelete(LinkList *L, int i, ElemType *e){
 
 ---
 
-**总结：相较于顺序存储的数组存储结构，对于插入或删除数据越频繁的操作，单链表的效率优势就越明显**
+==小结：相较于顺序存储的数组存储结构，对于插入或删除数据越频繁的操作，单链表的效率优势就越明显==
 
