--- a/数据结构和算法笔记/数据结构笔记2018-6-24.md
+++ b/数据结构和算法笔记/数据结构笔记2018-6-24.md
@@ -66,7 +66,7 @@ p->next = s;
 - 返回成功；
 
 ```c
-Status ListInsert(LintList *L, int i, ElemType e){
+Status ListInsert(LinkList *L, int i, ElemType e){
     int j;
     LinkList p,s;
     p = *L;
