--- a/数据结构和算法笔记/数据结构笔记2018-6-25.md
+++ b/数据结构和算法笔记/数据结构笔记2018-6-25.md
@@ -13,7 +13,11 @@
 - 让L的头结点的指针指向NULL，即建立一个带头结点的单链表；
 - 循环实现后继结点的赋值和插入
 
-头插法建立单链表，即先让新节点的next指向头结点之后，然后让表头的next指向新结点，即始终让新结点插入到头部的位置。
+---
+
+## 头插法建立单链表
+
+即先让新节点的next指向头结点之后，然后让表头的next指向新结点，即始终让新结点插入到头部的位置。
 
 ```c
 /* 头插法建立单链表实例 */
@@ -22,7 +26,7 @@ void CreateListHead(LinkList *L, int n){
     int i;
     
     srand(time(0));
-    *L = (LinkList)malloc(sizeof(Node)); //*L是指向链表表头指针的指针，即*L的next指向的是头结点
+    *L = (LinkList)malloc(sizeof(Node)); //*L是链表头结点的指针，即它的下一个元素是链表的首个元素
     (*L)->next = NULL;
     
     for(i=0;i < n; i++;){
@@ -39,21 +43,25 @@ void CreateListHead(LinkList *L, int n){
 ```c
 #include <stdio.h>
 #include <malloc.h>
-int b[]={2,3,4,5,6};
-void Test(int **L){
-   // **L = (int)malloc(sizeof(int));
-    printf("%d\n", **L);
-    *L = b;
-    printf("%d\n", **L);
+int c[]={1,2,3,4,5};
+int d[]={2,3,4,5,6};
+void Test(int **p){
+  *p = d;
+}
+void Test_noob(int *p){
+  p = d;
 }
 int main(){
-    int a[]={1,2,3,4,5};
-    int *L;
-    L = a;
-    printf("%d\n",*L);
-    Test(&L);
+  int *p;
+  p = c;
+  Test_noob(p);      //无法改变指针p的指向
+  printf("%d\n", *p);    //输出1
+  Test(&p);         //成功改变指针p的指向
+  printf("%d\n", *p);   //输出2
 }
 ```
+
+==在C语言中，如果想要通过函数来对某个变量进行更改，则应该传入该变量的地址，使用指针来修改。如果只是单纯的传入变量，则实际上C语言只会生成一个该参数的拷贝，而不会对其进行修改。==
 
 **PS:使用头插法生成的链表其顺序相对于输入顺序是反的**
 
@@ -69,7 +77,7 @@ void CreateListHead(LinkList *L, int n){
     int i;
     
     srand(time(0));
-    *L = (LinkList)malloc(sizeof(Node)); //*L是指向链表尾指针的指针，即*L的next指向的是头结点
+    *L = (LinkList)malloc(sizeof(Node)); //*L是链表头结点的指针，即它的下一个元素是链表的首个元素
     r = *L; //r指向头结点,同时也是当前尾结点，r和*L都是一级指针
     
     for(i=0;i < n; i++;){
