--- a/数据结构和算法笔记/数据结构笔记2018-6-26.md
+++ b/数据结构和算法笔记/数据结构笔记2018-6-26.md
@@ -66,7 +66,7 @@ typedef struct {
 }Component, StaticLinkList[MAXSIZE];
 ```
 
-由数组所描述的静态链表StaticLinkList[MAXSIZE]中，StaticLinkList[0]和StaticLinkList[MAXSIZE]的data都是不存储数据的。其游标分别是最后一个没有存储数据的下标，和第一个有存储数据的下标。而StaticLinkList剩余的数据的游标的值则是下一个数据的下标的值。具体情况如下图：![静态链表](G:\bilibili_pa\git_work\code-git\数据结构和算法笔记\静态链表.png)
+由数组所描述的静态链表StaticLinkList[MAXSIZE]中，StaticLinkList[0]和StaticLinkList[MAXSIZE]的data都是不存储数据的。其游标分别是最后一个没有存储数据的下标，和第一个有存储数据的下标。而StaticLinkList剩余的数据的游标的值则是下一个数据的下标的值。具体情况如下图：![静态链表](https://github.com/sinbasarafollower/pratice_code/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%92%8C%E7%AE%97%E6%B3%95%E7%AC%94%E8%AE%B0/%E9%9D%99%E6%80%81%E9%93%BE%E8%A1%A8.png)
 
 对静态链表进行初始化相当于初始化数组：
 
