--- a/数据结构和算法笔记/数据结构笔记2018-6-26.md
+++ b/数据结构和算法笔记/数据结构笔记2018-6-26.md
@@ -53,7 +53,7 @@ Status ClearList(LinkList *L){
 
 ---
 
-## 静态链表
+# 静态链表
 
 用数组描述的链表叫作静态链表，这种描述方法叫作==游标实现法==
 
@@ -68,6 +68,8 @@ typedef struct {
 
 由数组所描述的静态链表StaticLinkList[MAXSIZE]中，StaticLinkList[0]和StaticLinkList[MAXSIZE]的data都是不存储数据的。其游标分别是最后一个没有存储数据的下标，和第一个有存储数据的下标。而StaticLinkList剩余的数据的游标的值则是下一个数据的下标的值。具体情况如下图：![静态链表](https://github.com/sinbasarafollower/pratice_code/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%92%8C%E7%AE%97%E6%B3%95%E7%AC%94%E8%AE%B0/%E9%9D%99%E6%80%81%E9%93%BE%E8%A1%A8.png)
 
+**ps : 上图链表中最后一个元素的游标应该是0**
+
 对静态链表进行初始化相当于初始化数组：
 
 ```c
@@ -79,3 +81,75 @@ Status InitList(StaticLinkList space){
 }
 ```
 
+---
+
+## 静态链表的插入操作
+
+```c
+//获取空闲下标函数
+int Malloc_SLL(StaticLinkList space){
+    int i = space[0].cur;
+    if(space[0].cur) space[0].cur = space[i].cur; //把它的下一个分量用来作为备用
+    return i;
+}
+/* 在静态链表L中第i个元素之前插入新的数据元素e */
+Status ListInsert(StaticLinkList L, int i, ElemType e){
+    int j, k, l;
+    k = MAX_SIZE - 1; //数组的最后一个元素
+    if(i<1 || i>ListLength(L)+1){
+        return ERROR;
+    }
+    j = Malloc_SLI(L);
+    if(j){
+        L[j].data = e;
+        for(l=1;l<=i-1;l++){
+            k = L[k].cur;
+        }
+        L[j].cur = L[k].cur;
+        L[k].cur = j;
+        return OK;
+    }
+    return ERROR;
+}
+```
+
+---
+
+## 静态链表的删除操作
+
+```c
+// 删除在L中的第i个数据元素
+Status ListDelete(StaticLinkList L, int i){
+    int j, k;
+    if(i<1 || i>ListLength(L)){
+        return ERROR;
+    }
+    k = MAX_SIZE - 1;
+    for(j=1;j<=i-1;j++){
+        k = L[k].cur;
+    }
+    j = L[k].cur;
+    l[k].cur = l[j].cur;
+    Free_SLI(L,j);
+    return OK;
+}
+
+// 将下标为k的空闲结点回收到备用链表
+void Free_SLI(StaticLinkList space, int k){
+    space[k].cur = space[0].cur;
+    space[0].cur = k;
+}
+```
+
+---
+
+##静态链表优缺点：
+
+优点：
+
+- 在插入和删除操作时，只需要修改游标，不需要移动元素，从而改进了在顺序存储结构中的插入和删除操作需要大量移动元素的缺点
+
+缺点：
+
+- 没有解决连续存储分配（数组）带来的表难以确定长度的问题
+- 失去了顺序存储结构随机存取的特性
